<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.IndexFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:src="@drawable/chat_app" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:fontFamily="@font/catamaran_semibold"
        android:text="@string/lbl_index_title"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btn_index_sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rippleColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_index_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_id"
        app:layout_constraintStart_toStartOf="@+id/sign_up_id"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_id"
        app:rippleColor="@color/colorPrimaryDark" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>