<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Index">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:src="@drawable/chat_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:fontFamily="monospace"
        android:text="@string/lbl_index_title"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size_height_xxxhdpi"
        android:layout_marginStart="@dimen/margin_padding_xxnormal"
        android:layout_marginTop="@dimen/toolbar_margin_hdpi"
        android:layout_marginEnd="@dimen/margin_padding_xxnormal"
        android:text="@string/btn_index_sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:transitionName="btn_submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size_xxhdpi"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:rippleColor="@color/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size_height_xxxhdpi"
        android:text="@string/btn_index_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size_xxhdpi"
        android:textStyle="bold"
        android:transitionName="btn_submit"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:rippleColor="@color/colorPrimaryDark" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>