<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignUpFragment">

    <include
        android:id="@+id/include"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="0.011dp"
        android:background="@color/colorGray"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_user_name_TIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@style/Error"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:hintTextColor="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:startIconTint="@color/colorGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_user_name_TIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:hint="@string/lbl_user_name"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_TIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@style/Error"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_user_name_TIL"
        app:startIconTint="@color/colorGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password_TIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_index_sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_password_TIL"
        app:layout_constraintStart_toStartOf="@+id/sign_up_password_TIL"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_TIL"
        app:rippleColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/sign_up_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_index_login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_submit_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_submit_btn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/lbl_agreement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>