<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Login">

    <include
        android:id="@+id/include"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@+id/include"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_padding_normal"
        android:layout_marginEnd="@dimen/margin_padding_normal"
        android:background="@color/colorLightGray"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/common_user_name_TIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_xxnormal"
        android:layout_marginTop="@dimen/toolbar_margin_hdpi"
        android:layout_marginEnd="@dimen/margin_padding_xxnormal"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@style/Error"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:hintTextColor="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:startIconTint="@color/colorGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/common_user_name_TIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:hint="@string/lbl_user_name"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="@dimen/text_size_small_xhdpi" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/common_password_TIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopBig_hdpi"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@style/Error"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/common_user_name_TIL"
        app:layout_constraintStart_toStartOf="@+id/common_user_name_TIL"
        app:layout_constraintTop_toBottomOf="@+id/common_user_name_TIL"
        app:startIconTint="@color/colorGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/common_password_TIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/text_size_small_xhdpi" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/common_submit_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size_height_xxxhdpi"
        android:layout_marginTop="@dimen/marginTop_xxxhdpi"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size_xxhdpi"
        android:textStyle="bold"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="@+id/common_password_TIL"
        app:layout_constraintStart_toStartOf="@+id/common_password_TIL"
        app:layout_constraintTop_toBottomOf="@+id/common_password_TIL"
        app:rippleColor="@color/colorPrimaryDark" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/common_nav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_xsmall"
        android:textSize="@dimen/text_size_small_xxxhdpi"
        app:layout_constraintEnd_toEndOf="@+id/common_submit_btn"
        app:layout_constraintStart_toStartOf="@+id/common_submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/common_submit_btn" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_hdpi"
        android:fontFamily="sans-serif"
        android:text="@string/lbl_agreement"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="@dimen/text_size_small_xxhdpi"
        app:layout_constraintEnd_toEndOf="@+id/common_submit_btn"
        app:layout_constraintStart_toStartOf="@+id/common_submit_btn"
        app:layout_constraintTop_toBottomOf="@+id/common_nav_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>